--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title></title>
-  </head>
 
-  <body>
-    <div id="root"></div>
-    <!-- font awesome kit code -->
-    <script
-      src="https://kit.fontawesome.com/b0c9867115.js"
-      crossorigin="anonymous"
-    ></script>
-    <!--
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>document</title>
+</head>
+
+<body>
+  <noscript></noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -23,5 +20,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
